@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.952 2013/01/19 10:22:11 manu Exp $
+# $NetBSD: Makefile,v 1.953 2013/01/19 10:24:41 manu Exp $
 #
 
 COMMENT=	Networking tools
@@ -304,6 +304,7 @@ SUBDIR+=	mydns-pgsql
 SUBDIR+=	nagios-base
 SUBDIR+=	nagios-nrpe
 SUBDIR+=	nagios-nsca
+SUBDIR+=	nagios-plugin-dumpdates
 SUBDIR+=	nagios-plugin-ldap
 SUBDIR+=	nagios-plugin-mysql
 SUBDIR+=	nagios-plugin-pgsql
