@@ -1,0 +1,2 @@
+@comment $NetBSD: PLIST,v 1.1 2013/01/19 10:24:41 manu Exp $
+libexec/nagios/check_dumpdates
